--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://example.org/"
+baseurl = "https://www.bruiserconversions.com/"
 languageCode = "en-us"
 theme = "bruiser-conversions"
-title = "My New Hugo Site"
+title = "Bruiser Conversions"
